deployments/cnp-l7-frontend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: l7-visibility-frontend
  namespace: online-boutique
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  ingress:
  - fromEntities:
    - cluster
    - host
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - {}   # regola vuota = consenti tutto HTTP → attiva proxy Envoy → Hubble L7
